# datadoc

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/datadoc/: __init__.py  cli.py  models.py  report.py
src/datadoc/auditor/: __init__.py  cleaner.py  profiler.py  validator.py
tests/: test_benchmark.py  test_core.py  test_datadoc.py  test_integration.py
